--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.0",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "node-geocoder": "^3.25.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
