--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "node-geocoder": "^3.25.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "client/*"
+    ]
   }
 }
