--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.9.1",
     "node-geocoder": "^3.25.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "project-3-parkpal": "file:client"
   },
   "nodemonConfig": {
     "ignore": [
